# bootcamp_project

./: .gitignore  CMakeLists.txt  Emulator-main-threads.cpp  Emulator-main.cpp  Emulatormain.cpp  MagicStart.txt  README.md  magic_start  main.cpp  run_tests
CANIO/: CANIO.cpp
Code/: .gitignore  CMakeLists (copy).txt  CMakeLists.txt  magic_start  run_tests
Code/1_InputHandler/: CMakeLists.txt
Code/1_InputHandler/Include/: input_handler.h  keyboard_reader.h
Code/1_InputHandler/Src/: input_handler.cpp  keyboard_reader.cpp  main.cpp
Code/2_Emulator/: CMakeLists.txt
Code/2_Emulator/Include/: com_eng_gbx_def.h  engine.h  gearbox.h
Code/2_Emulator/Src/: emulator_main.cpp  engine.cpp  gearbox.cpp
Code/2_Emulator/Test/: emulator_main_test.cpp  engine_test.cpp  gearbox_mock.h  gearbox_test.cpp
Code/3_GUI/: CMakeLists.txt
Code/3_GUI/app/: CMakeLists.txt
Code/3_GUI/app/avic/: CMakeLists.txt
Code/3_GUI/app/avic/include/: your_stuff.h
Code/3_GUI/app/avic/qml/: DashboardGaugeStyle.qml  ValueSource.qml
Code/3_GUI/app/avic/src/: your_stuff.cpp
Code/4_CommonUtils/CANIO/Include/: can_io.h  socketcan_cpp.h
Code/4_CommonUtils/CANIO/Src/: can_io.cpp  socketcan_cpp.cpp
Code/4_CommonUtils/DataBase/Include/: database.h
Code/4_CommonUtils/SharedMemory/Include/: shared_memory.h
Code/5_Tests/: makefile  test_gearbox.cpp  test_input_handler.cpp  test_keyboard_reader.cpp  test_read_can.cpp  unitEngine.cpp
Code/6_OldTests/Test_1_InputHandler/: gtest_keyboard_reader.cpp
Code/7_OldTests/Test_1_InputHandler/: gtest_keyboard_reader.cpp
Docs/: CanFrameMessages.txt  MVP.txt
Docs/src/: ActivityDiagram_Accelerate.iuml  ActivityDiagram_Decelerate.iuml  ActivityDiagram_TurnOffEngine.iuml  ComponentDiagram.iuml  activity_change_gear.wsd  component_diagram.wsd  sequence_accelerate.wsd  sequence_change_gear.wsd  sequence_decelerate.swd  sequence_emulator_process_alternative.wsd  sequence_engine.wsd  sequence_turn_off_engine.wsd
EmulatorFramePacker/: FramePacker.cpp
Engine/: Engine.cpp  engine.h  makefile
GUI/: CMakeLists.txt
GUI/app/avic/include/: cluster_updater.h
GUI/app/avic/src/: your_stuff.cpp
Gearbox/: GearClass.cpp  GearClass.h
Headerfiles/: CanInput.h  GearClass.h  InputHandler.h  engine.h  frameToBus.h  socketcan_cpp.h
Includes/: KeyboardReader.h
Includes/ReadCan/: CanInput.h  canReader.cpp
Includes/SendCan/: Makefile  example.cpp  frameToBus.cpp
InputHandler/: InputHandler.cpp  InputHandler.h  KeyboardReader.cpp  KeyboardReader.h  main.cpp
ReadCan/: canReader.cpp
SendCan/: Makefile  canSender.cpp  example.cpp  frameToBus.cpp  frameToBus.h
docs/: CanFrameMessages.txt  NeededClasses
docs/src/: ActivityDiagram_Accelerate.iuml  ActivityDiagram_Decelerate.iuml  ActivityDiagram_TurnOffEngine.iuml  ComponentDiagram.iuml  activity_change_gear.wsd  activity_inform_driver.wsd  activity_start_engine.wsd  component_diagram.wsd  sequence_accelerate.wsd  sequence_change_gear.wsd  sequence_engine.wsd  sequence_turn_off_engine.wsd  usecases.wsd
src/: InputHandler.cpp  KeyboardReader.cpp
tests/: GTest_KeyboardReader.cpp  TestGearboxClass.cpp  Test_InputHandler.cpp  Test_KeyboardReader.cpp  Test_ReadCan.cpp  makefile  unitEngine.cpp  unitEngineClass.cpp
